fix footer alignment

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -27,16 +27,7 @@ a {
   text-decoration: none;
 }
 
-/*a:link {color: #333;}
-a:active {color: #333;}
-a:visited {color: #333;}
-a:hover {color: #333;}*/
-
-#email a:link {color: #333;}
-#email a:active {color: #333;}
-#email a:visited {color: #333;}
-#email a:hover {
-  color: #333;
+a:hover {
   text-decoration: underline;
 }
 
@@ -210,25 +201,12 @@ h4 {
   padding-left: 150px;
 }
 
-.skill {
-  height: 200px;
-}
-
-#footerWrapper {
-  text-align: center;
-  position: relative;
-  top: 40px;
-}
-
 footer {
-  text-align: center;
   color: $offWhite;
-  display: inline-block;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
   position: relative;
-  left: 100px;
 }
 
 .hiddenText {
@@ -279,10 +257,10 @@ h3 {
   height: 40px;
   width: 40px;
   position: relative;
-  top: -10px + $padding;
+  top: -5px;
   opacity: 0.9;
   color: white;
-  right: -10px;
+  right: -104px;
 }
 
 #githubIconBottom {
@@ -298,14 +276,14 @@ h3 {
   height: 80px;
   width: 80px;
   bottom: 80px;
-  right: 4px;
+  right: 20px;
   opacity: 0.9;
 }
 
 #soundcloudText {
   @include hiddenText;
-  top: -120px;
-  right: -2px;
+  top: -150px;
+  right: 130px;
 }
 
 #envelopeIcon {
@@ -344,7 +322,7 @@ h3 {
 
 #copyright {
   position: relative;
-  top: -120px;
+  top: -148px;
 }
 
 #freshairLogo {
@@ -463,9 +441,6 @@ and (max-width : 670px) {
     text-align: center;
     clear: right;
   }
-  #footerWrapper {
-    display: block;
-  }
   #linkedinIcon {
     left: -44px;
   }
@@ -565,12 +540,6 @@ and (max-width : 1080px) {
   .experience p {
     font-size: 13px;
   }
-  #footerWrapper {
-    position: relative;
-    margin-left: auto;
-    margin-right: auto;
-    left: 30px;
-  }
   #essentialEconomyLogo {
     margin-top: 20px;
   }
@@ -607,10 +576,6 @@ and (max-width : 1350px) {
     width: 27%;
     height: 300px;
   }
-  #footerWrapper {
-    position: relative;
-    left: 30px;
-  }
   #essentialEconomyLogo {
     height: 100px;
     width: 190px;
@@ -622,14 +587,5 @@ and (max-width : 1350px) {
   #surfAndPaddleText {
     position: relative;
     top: 34px;
-  }
-}
-
-@media only screen
-and (min-width : 1351px) {
-  #footerWrapper {
-    position: relative;
-    top: 360px;
-    left: -660px;
   }
 }
